fix header pic spacing

--- a/app/assets/stylesheets/components/_header.scss
+++ b/app/assets/stylesheets/components/_header.scss
@@ -92,8 +92,6 @@
 		display: flex;
 		margin-left: auto;
 		align-items: flex-end;
-
-		* { margin-left: 8px; }
 	}
 
 	.header-user {
